# qdl-tee-times

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: test-auth.yml
qdl/: __init__.py  api_client.py  cli.py  config.py  data_processor.py  models.py
